--- a/index.html
+++ b/index.html
@@ -2,10 +2,322 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="description" content="" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/home/tech.png" />
+    <link rel="apple-touch-icon" href="./assets/img/home/tech.png" />
+
     <title>yuvarajG</title>
+    <script
+      src="https://kit.fontawesome.com/e5f441b479.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>HI</h1>
+    <!-- START NAVBAR -->
+    <header>
+      <!-- START LOGO & NAME -->
+      <nav id="navbar">
+        <div id="leftnav">
+          <!-- INSERT LOGO -->
+          <img src="./assets/img/home/tech.png" alt="tech logo" id="tech" />
+          <a href="#welcome-section" id="header-myname"
+            ><span> Yuvaraj G</span></a
+          >
+        </div>
+
+        <!-- LOGO END -->
+
+        <!-- START NAV LIST -->
+        <ul id="nav-list" class="nav-items">
+          <li class="nav-item">
+            <a href="#top" class="nav-link">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about-section" class="nav-link">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a href="#project-section" class="nav-link">PROJECTS</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact-section" class="nav-link">CONTACT</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <!-- END OF NAV LIST -->
+      </nav>
+    </header>
+    <!-- END NAV  -->
+
+    <!-- <h1>HI</h1> -->
+
+    <div id="sticky-sidebar">
+      <a
+        href="https://github.com/Yuvaraj-codes"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="yuvraj's GitHub profile"
+      >
+        <i id="github" class="fa-brands fa-github fa-xl"></i>
+      </a>
+      <a
+        href=" https://www.linkedin.com/in/yuvaraj371/ "
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="yuvraj's LinkedIn profile"
+      >
+        <i class="fa-brands fa-linkedin fa-xl"></i>
+      </a>
+      <a
+        href="https://www.behance.net/Yuvaraj_G"
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="yuvraj's Twitter profile"
+      >
+        <i class="fa-brands fa-behance fa-xl"></i>
+      </a>
+    </div>
+    <div id="top">hi</div>
+    <div id="jstoggle">
+      <input
+        type="checkbox"
+        class="toggle"
+        id="toggle"
+        aria-label="Toggle dark and light mode"
+      />
+      <label for="toggle" class="toggle-label">
+        <i
+          class="fa-regular fa-moon fa-lg"
+          aria-hidden="true"
+          style="color: #f6fffb"
+        ></i>
+        <i
+          class="fa-regular fa-sun fa-lg"
+          aria-hidden="true"
+          style="color: #f6fffb"
+        ></i>
+        <span class="switch"></span>
+      </label>
+    </div>
+
+    <!-------------------------->
+    <main>
+      <!-- START WELCOME SECTION -->
+
+      <!-- PROFILE SECTION -->
+      <img src="" alt="purple blob" id="leftblob" />
+      <section id="welcome-section">
+        <img src="" alt="Profile image of ePC " id="profilepic" />
+        <img src="" alt="Profile image " id="profilepicmobile of Mobile" />
+        <div id="intro">
+          <div id="hello-wrapper">
+            <h1 class="intro-item" id="hello">HELLO WORLD</h1>
+          </div>
+          <h2 class="intro-item" id="h2intro">I'm Yuvraj, Ux / Ui Designer</h2>
+          <p class="intro-item" id="ilovecats">I love Designing & coding</p>
+          <a
+            class="email-link intro-item"
+            href="mailto:gyuvarajganesh@gmail.com"
+            rel="noopener noreferrer"
+            target="_blank"
+            >Say Hi 👋</a
+          >
+          <div id="bot-icons">
+            <a
+              href="https://github.com/Yuvaraj-codes"
+              target="_blank"
+              aria-label=""
+            >
+              <i class="fa-brands fa-github fa-2xl" style="color: #000000"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/yuvaraj371/"
+              target="_blank"
+              aria-label=""
+            >
+              <i
+                class="fa-brands fa-linkedin fa-2xl"
+                style="color: #000000"
+              ></i>
+            </a>
+            <a
+              href="https://www.behance.net/Yuvaraj_G"
+              target="_blank"
+              aria-label=""
+            >
+              <i class="fa-brands fa-behance fa-2xl" style="color: #000000"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- START ABOUT SECTION-->
+      <section id="about-section">
+        <h2>ABOUT ME</h2>
+        <hr />
+        <div id="about-container">
+          <div id="about-content">
+            <h3>Who am I?</h3>
+            <p>
+              Hi! I'm Yuvaraj, a Ux / Ui Designer with a passion for creating
+              beautiful and functional websites. I have a strong foundation in
+              HTML and CSS, and am currently learning JavaScript.
+            </p>
+            <br />
+
+            <p>
+              When I'm not coding I'm usually playing League of Legends or
+              spending time with friends 😊
+            </p>
+            <br />
+            <p>
+              Feel free to
+              <a
+                class="get-in-touch"
+                href="mailto:gyuvarajganesh@gmail.com"
+                rel="noopener noreferrer"
+                target="_blank"
+                >email</a
+              >
+              me if you have any questions or just want to chat!
+            </p>
+            <!-- BUTTON ?? RESUME OR CONTACT -->
+          </div>
+          <div id="skill-container">
+            <h3>My Skills</h3>
+            <div id="skills">
+              <div>Figma</div>
+              <div>Xd</div>
+              <div>Photoshop</div>
+              <div>InDesign</div>
+              <div>After Effects</div>
+              <div>HTML5</div>
+              <div>CSS3</div>
+              <div>TailwindCSS</div>
+              <div>Bootstrap</div>
+              <div>JavaScript</div>
+              <div>Github</div>
+            </div>
+          </div>
+        </div>
+        <button id="resumebutton" class="resumebutton">
+          <a href="" target="_blank" class="resumea">Resumé</a>
+        </button>
+      </section>
+      <!-- END ABOUT SECTION -->
+
+      <!-- START PROJECT SECTION -->
+      <section id="project-section">
+        <h2>PROJECTS</h2>
+        <hr />
+        <div id="projects-grid-container">
+          <a href="" class="project-bg" target="_blank">
+            <img class="project-image" src="" alt="" />
+            <p class="project-title"></p>
+          </a>
+          <a href="" class="project-bg" target="_blank">
+            <img class="project-image" src="" alt="" />
+            <p class="project-title"></p>
+          </a>
+          <a href="" class="project-bg" target="_blank">
+            <img class="project-image" src="" alt="" />
+            <p class="project-title"></p>
+          </a>
+          <a href="" class="project-bg" target="_blank">
+            <img class="project-image" src="" alt="" />
+            <p class="project-title"></p>
+          </a>
+          <a href="" class="project-bg" target="_blank">
+            <img class="project-image" src="" alt="" />
+            <p class="project-title"></p>
+          </a>
+          <a href="" class="project-bg" target="_blank">
+            <img class="project-image" src="" alt="" />
+            <p class="project-title"></p>
+          </a>
+        </div>
+
+        <a href="" id="seemore-button" target="_blank" aria-label="">
+          See more
+        </a>
+      </section>
+      <!-- END PROJECT SECTION -->
+      <!-- START CONTACT SECTION -->
+      <section id="contact-section">
+        <h2>CONTACT</h2>
+        <hr />
+        <p>
+          Feel free to reach out if you have any questions, if you'd like to
+          discuss potential opportunities or even if you just want to be
+          friends, I'd love to chat with you!
+        </p>
+        <div id="email-form-container">
+          <form
+            action="https://formspree.io/f/mayzavzb"
+            id="form"
+            method="POST"
+          >
+            <input
+              class="input-item"
+              type="name"
+              name="name"
+              placeholder="Name"
+              id="name-input"
+              required
+            />
+            <input
+              class="input-item"
+              type="email"
+              name="email"
+              placeholder="Email"
+              required
+            />
+            <textarea
+              class="input-item"
+              name="message"
+              id=""
+              cols="50"
+              rows="12"
+              placeholder="Message"
+              required
+            ></textarea>
+            <input type="submit" value="Submit" id="submit-button" />
+          </form>
+        </div>
+      </section>
+
+      <!-- END CONTACT SECTION -->
+      <footer>
+        <div id="footer-items">
+          <div class="custom-shape-divider-top-1682552844">
+            <svg
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 1200 120"
+              preserveAspectRatio="none"
+            >
+              <path
+                d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                class="shape-fill"
+              ></path>
+            </svg>
+          </div>
+
+          <p id="footer-text">
+            Designer
+            <a target="_blank" href="https://www.instagram.com/ /"> sus_peck</a>
+          </p>
+          <br />
+          <p>Email: gyuvarajganesh@gmail.com</p>
+        </div>
+      </footer>
+    </main>
+    <script src="script.js"></script>
   </body>
 </html>
