--- a/index.html
+++ b/index.html
@@ -217,33 +217,81 @@
         <h2>PROJECTS</h2>
         <hr />
         <div id="projects-grid-container">
-          <a href="" class="project-bg" target="_blank">
-            <img class="project-image" src="" alt="" />
+          <a
+            href="https://www.behance.net/gallery/173816061/Dashboard-(Smart-Home)"
+            class="project-bg"
+            target="_blank"
+          >
+            <img
+              class="project-image"
+              src="./assets/img/general/Project/smart home dashboard.jpg"
+              alt=""
+            />
             <p class="project-title"></p>
           </a>
-          <a href="" class="project-bg" target="_blank">
-            <img class="project-image" src="" alt="" />
+          <a
+            href="https://www.behance.net/gallery/172743933/UXUI-Portfolio-Petcare"
+            class="project-bg"
+            target="_blank"
+          >
+            <img
+              class="project-image"
+              src="./assets/img/general/Project/ux ui case study.png"
+              alt=""
+            />
             <p class="project-title"></p>
           </a>
-          <a href="" class="project-bg" target="_blank">
-            <img class="project-image" src="" alt="" />
+          <a
+            href="https://www.behance.net/gallery/173337183/Website-Design-Portfolio-(-Ice-cream)"
+            class="project-bg"
+            target="_blank"
+          >
+            <img
+              class="project-image"
+              src="./assets/img/general/Project/webdesign portfolio.jpg"
+              alt=""
+            />
             <p class="project-title"></p>
           </a>
-          <a href="" class="project-bg" target="_blank">
-            <img class="project-image" src="" alt="" />
+          <a
+            href="https://www.behance.net/gallery/170132449/Fine-Arts-Portfolio"
+            class="project-bg"
+            target="_blank"
+          >
+            <img
+              class="project-image"
+              src="./assets/img/general/Project/fine arts portfolio.jpg"
+              alt=""
+            />
             <p class="project-title"></p>
           </a>
-          <a href="" class="project-bg" target="_blank">
-            <img class="project-image" src="" alt="" />
+          <a
+            href="https://www.behance.net/gallery/164775651/Graphic-Design-portfolio"
+            class="project-bg"
+            target="_blank"
+          >
+            <img
+              class="project-image"
+              src="./assets/img/general/Project/graphic design portfolio.jpg"
+              alt=""
+            />
             <p class="project-title"></p>
           </a>
-          <a href="" class="project-bg" target="_blank">
+
+          <!-- EXTRA ONE  STARTS-->
+          <!-- <a href="" class="project-bg" target="_blank">
             <img class="project-image" src="" alt="" />
             <p class="project-title"></p>
-          </a>
+          </a> -->
+          <!-- EXTRA ONE ENDS -->
         </div>
 
-        <a href="" id="seemore-button" target="_blank" aria-label="">
+        <a
+          href="https://www.behance.net/Yuvaraj_G/projects"
+          id="seemore-button"
+          target="_blank"
+          aria-label=""
+        >
           See more
         </a>
       </section>
