Project Title Fixed

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               src="./assets/img/general/Project/smart home dashboard.jpg"
               alt=""
             />
-            <p class="project-title"></p>
+            <p class="project-title">Dashboard (Smart Home)</p>
           </a>
           <a
             href="https://www.behance.net/gallery/172743933/UXUI-Portfolio-Petcare"
@@ -239,7 +239,7 @@
               src="./assets/img/general/Project/ux ui case study.png"
               alt=""
             />
-            <p class="project-title"></p>
+            <p class="project-title">UXUI Portfolio - Petcare</p>
           </a>
           <a
             href="https://www.behance.net/gallery/173337183/Website-Design-Portfolio-(-Ice-cream)"
@@ -251,7 +251,7 @@
               src="./assets/img/general/Project/webdesign portfolio.jpg"
               alt=""
             />
-            <p class="project-title"></p>
+            <p class="project-title">Website Design Portfolio ( Ice cream)</p>
           </a>
           <a
             href="https://www.behance.net/gallery/170132449/Fine-Arts-Portfolio"
@@ -263,7 +263,7 @@
               src="./assets/img/general/Project/fine arts portfolio.jpg"
               alt=""
             />
-            <p class="project-title"></p>
+            <p class="project-title">Fine Arts Portfolio</p>
           </a>
           <a
             href="https://www.behance.net/gallery/164775651/Graphic-Design-portfolio"
@@ -275,7 +275,7 @@
               src="./assets/img/general/Project/graphic design portfolio.jpg"
               alt=""
             />
-            <p class="project-title"></p>
+            <p class="project-title">Graphic Design portfolio</p>
           </a>
 
           <!-- EXTRA ONE  STARTS-->
@@ -306,11 +306,8 @@
           friends, I'd love to chat with you!
         </p>
         <div id="email-form-container">
-          <form
-            action="https://formspree.io/f/mayzavzb"
-            id="form"
-            method="POST"
-          >
+          <!-- HERE IS PUT THE KEY !! -->
+          <form action="https://formspree.io/f/  " id="form" method="POST">
             <input
               class="input-item"
               type="name"
