--- a/index.html
+++ b/index.html
@@ -171,10 +171,7 @@
             </p>
             <br />
 
-            <p>
-              When I'm not coding I'm usually playing League of Legends or
-              spending time with friends 😊
-            </p>
+            <p>When I'm not coding I'm usually spending time with friends 😊</p>
             <br />
             <p>
               Feel free to
@@ -307,7 +304,11 @@
         </p>
         <div id="email-form-container">
           <!-- HERE IS PUT THE KEY !! -->
-          <form action="https://formspree.io/f/  " id="form" method="POST">
+          <form
+            action="https://formspree.io/f/mzbldeja  "
+            id="form"
+            method="POST"
+          >
             <input
               class="input-item"
               type="name"
