--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
       <img src="" alt="purple blob" id="leftblob" />
       <section id="welcome-section">
         <img src="" alt="Profile image of ePC " id="profilepic" />
-        <img src="" alt="Profile image " id="profilepicmobile of Mobile" />
+        <img
+          src="./assets/img/home/profile.jpg"
+          alt="Profile image "
+          id="profilepicmobile of Mobile"
+        />
         <div id="intro">
           <div id="hello-wrapper">
             <h1 class="intro-item" id="hello">HELLO WORLD</h1>
@@ -123,7 +127,7 @@
           <p class="intro-item" id="ilovecats">I love Designing & coding</p>
           <a
             class="email-link intro-item"
-            href="mailto:gyuvarajganesh@gmail.com"
+            href=""
             rel="noopener noreferrer"
             target="_blank"
             >Say Hi 👋</a
