--- a/index.html
+++ b/index.html
@@ -208,7 +208,13 @@
           </div>
         </div>
         <button id="resumebutton" class="resumebutton">
-          <a href="" target="_blank" class="resumea">Resumé</a>
+          <!-- add the link herer -->
+          <a
+            href="https://drive.google.com/file/d/1ddz9ecgNFz7AGu18Dp7URbKdL8c62nnn/view?usp=sharing"
+            target="_blank"
+            class="resumea"
+            >Resumé</a
+          >
         </button>
       </section>
       <!-- END ABOUT SECTION -->
