--- a/index.html
+++ b/index.html
@@ -114,11 +114,7 @@
       <img src="" alt="purple blob" id="leftblob" />
       <section id="welcome-section">
         <img src="" alt="Profile image of ePC " id="profilepic" />
-        <img
-          src="./assets/img/home/profile.jpg"
-          alt="Profile image "
-          id="profilepicmobile of Mobile"
-        />
+        <img src="" alt="Profile image " id="profilepicmobile of Mobile" />
         <div id="intro">
           <div id="hello-wrapper">
             <h1 class="intro-item" id="hello">HELLO WORLD</h1>
