--- a/index.html
+++ b/index.html
@@ -113,8 +113,13 @@
       <!-- PROFILE SECTION -->
       <img src="" alt="purple blob" id="leftblob" />
       <section id="welcome-section">
-        <img src="" alt="Profile image of ePC " id="profilepic" />
-        <img src="" alt="Profile image " id="profilepicmobile of Mobile" />
+        <img src="." alt="Profile image of PC " id="profilepic" />
+        <img
+          style="width: 450px; height: 550px; border-radius: 20%"
+          src=""
+          alt="Profile image "
+          id="  "
+        />
         <div id="intro">
           <div id="hello-wrapper">
             <h1 class="intro-item" id="hello">HELLO WORLD</h1>
