--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
           <div id="hello-wrapper">
             <h1 class="intro-item" id="hello">HELLO WORLD</h1>
           </div>
-          <h2 class="intro-item" id="h2intro">I'm Yuvraj, Ux / Ui Designer</h2>
-          <p class="intro-item" id="ilovecats">I love Designing & coding</p>
+          <h2 class="intro-item" id="h2intro">I'm Yuvaraj, UX / UI Designer</h2>
+          <p class="intro-item" id="ilovecats">I love Designing & Coding</p>
           <a
             class="email-link intro-item"
             href=""
@@ -198,10 +198,10 @@
               <div>Xd</div>
               <div>Photoshop</div>
               <div>InDesign</div>
-              <div>After Effects</div>
+              <div>Corel draw</div>
               <div>HTML5</div>
               <div>CSS3</div>
-              <div>TailwindCSS</div>
+              <div>Illustrator</div>
               <div>Bootstrap</div>
               <div>JavaScript</div>
               <div>Github</div>
