--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div id="about-content">
             <h3>Who am I?</h3>
             <p>
-              Hi! I'm Yuvaraj, a Ux / Ui Designer with a passion for creating
+              Hi! I'm Yuvaraj, a UX / UI Designer with a passion for creating
               beautiful and functional websites. I have a strong foundation in
               HTML and CSS, and am currently learning JavaScript.
             </p>
