--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
     <main>
       <!-- START WELCOME SECTION -->
 
-      <!-- PROFILE SECTION -->
+<!--       <!-- PROFILE SECTION -->
       <img src="" alt="purple blob" id="leftblob" />
       <section id="welcome-section">
-<!--         <img src="." alt="Profile image of PC " id="profilepic" /> -->
-<!--         <img
+        <img src="." alt="Profile image of PC " id="profilepic" />
+        <img
           style="width: 450px; height: 550px; border-radius: 20%"
           src=""
           alt="Profile image "
