--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <main>
       <!-- START WELCOME SECTION -->
 
-<!--       <!-- PROFILE SECTION -->
+      <!-- PROFILE SECTION -->
       <img src="" alt="purple blob" id="leftblob" />
       <section id="welcome-section">
         <img src="." alt="Profile image of PC " id="profilepic" />
@@ -119,7 +119,7 @@
           src=""
           alt="Profile image "
           id="  "
-        /> -->
+        />
         <div id="intro">
           <div id="hello-wrapper">
             <h1 class="intro-item" id="hello">HELLO WORLD</h1>
